2014-07-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Fix curl version check for
	  CURLE_SSL_CACERT_BADFILE.

2014-07-07  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.6
	* ReleaseNotes: Change in 3.3.6
	* VERSION: 3.3.6

2014-07-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (handle_dumper_result): Call dumper_taper_result
	  if we already get the taper result.

2014-07-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driverio.c (update_info_dumper): Do not update if size or
	  csize is 0.
	* server-src/server_util.c: Do not uses history if size is 0.

2014-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Use bloking connect.

2014-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/taper.pl: Accept some log lines in varying order.

2014-06-02  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Add 'directory is on a different
	  filesystem; not dumped' as a normal message.

2014-05-31  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Sort to get repeatable result.
	* perl/Amanda/Disklist.swg: Sort to get repeatable result.
	* perl/Amanda/Report.pm: Sort to get repeatable result.
	* perl/Amanda/Report/human.pm: Sort to get repeatable result.
	* installcheck/catalogs/filesystemstaped.cat: Fix for new order.

2014-05-30  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix for SunOS
	* perl/Amanda/Interactivity.pm: Do not die if ->new return undef.
	* perl/Amanda/Interactivity/stdin.pm: Add debugging if can't read
	  STDIN.

2014-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtape.pl: Add relabeled case.

2014-05-12  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec.src: Add amazon.

2014-05-09  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendsize.c: Fix compiler warning.
